Adding repositories and test projects.

--- a/src/Pubs.Application/Pubs.Application.csproj
+++ b/src/Pubs.Application/Pubs.Application.csproj
@@ -7,10 +7,19 @@
     <PackageReference Include="AutoMapper" Version="9.0.0" />
     <PackageReference Include="FluentValidation" Version="8.6.0" />
     <PackageReference Include="FluentValidation.AspNetCore" Version="8.6.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="3.1.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Pubs.Core\Pubs.Core.csproj" />
+    <Folder Include="Common\Models\" />
+    <Folder Include="Common\Mappings\" />
+    <Folder Include="Common\Exceptions\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Pubs.CoreDomain\Pubs.CoreDomain.csproj" />
+    <ProjectReference Include="..\Pubs.SharedKernel\Pubs.SharedKernel.csproj" />
   </ItemGroup>
 
 </Project>
