--- a/src/Pubs.Application/Pubs.Application.csproj
+++ b/src/Pubs.Application/Pubs.Application.csproj
@@ -1,20 +1,26 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>netstandard2.1</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Compile Remove="Common\Exceptions\**" />
+    <Compile Remove="Common\Mappings\**" />
+    <Compile Remove="Common\Models\**" />
+    <EmbeddedResource Remove="Common\Exceptions\**" />
+    <EmbeddedResource Remove="Common\Mappings\**" />
+    <EmbeddedResource Remove="Common\Models\**" />
+    <None Remove="Common\Exceptions\**" />
+    <None Remove="Common\Mappings\**" />
+    <None Remove="Common\Models\**" />
+  </ItemGroup>
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="9.0.0" />
     <PackageReference Include="FluentValidation" Version="8.6.0" />
     <PackageReference Include="FluentValidation.AspNetCore" Version="8.6.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="3.1.0" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Common\Models\" />
-    <Folder Include="Common\Mappings\" />
-    <Folder Include="Common\Exceptions\" />
   </ItemGroup>
 
   <ItemGroup>
