--- a/tests/Pubs.Infrastructure.Persistence.UnitTests/Pubs.Infrastructure.Persistence.UnitTests.csproj
+++ b/tests/Pubs.Infrastructure.Persistence.UnitTests/Pubs.Infrastructure.Persistence.UnitTests.csproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
 
     <IsPackable>false</IsPackable>
+    <UserSecretsId>f6135072-49cd-41ea-b3a2-e9c4a96040fa</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
