--- a/tests/Pubs.Application.UnitTests/Pubs - Backup.Application.UnitTests.csproj
+++ b/tests/Pubs.Application.UnitTests/Pubs - Backup.Application.UnitTests.csproj
@@ -30,7 +30,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Domain\" />
+    <Folder Include="Repositories\" />
   </ItemGroup>
 
 </Project>
