--- a/tests/Pubs.Infrastructure.IntegrationTests/Pubs.Infrastructure.IntegrationTests.csproj
+++ b/tests/Pubs.Infrastructure.IntegrationTests/Pubs.Infrastructure.IntegrationTests.csproj
@@ -10,6 +10,7 @@
   <ItemGroup>
     <PackageReference Include="FluentAssertions" Version="5.10.3" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="5.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="3.1.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.9.1" />
     <PackageReference Include="Moq" Version="4.16.1" />
     <PackageReference Include="NLog" Version="4.7.9" />
