Adding an API & finishing first draft of data access layer.

--- a/src/Pubs.API/appsettings.json
+++ b/src/Pubs.API/appsettings.json
@@ -1,14 +1,50 @@
 {
-  "EntityFrameworkCoreSettings" : {
+  "EntityFrameworkCoreSettings": {
     "CommandLogLevel": "Warning",
     "ComamndTimeout": "60"
   },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
+    },
+    "NLog": {
+      "IncludeScopes": true
     }
   },
-  "AllowedHosts": "*"
+
+  "AllowedHosts": "*",
+
+  "NLog": {
+    "autoReload": true,
+    "throwConfigExceptions": true,
+    "extensions": [
+      { "assembly": "NLog.Web.AspNetCore" }
+    ],
+
+    "variables": {
+      "logFileDir": "C:\\Temp\\Pubs\\API\\Log",
+      "standardTextLayout": "${longdate} ${level:upperCase=true} ${logger}${newline}${message}${newline}"
+    },
+
+    "targets": {
+      "defaultNlogAllFile": {
+        "type": "File",
+        "fileName": "${logFileDir}\\nlog-all-${shortdate}.log",
+        "layout": "${standardTextLayout}"
+      }
+    },
+
+    "rules": [
+      {
+        "logger": "*",
+        "minlevel": "Trace",
+        "writeTo": "defaultNlogAllFile",
+        "ruleName": "PubsDefaultLogRule"
+      }
+    ]
+
+  }
 }
