Adding fluent validation to API. Getting rolling with more Angular fun.

--- a/src/Pubs.API/appsettings.json
+++ b/src/Pubs.API/appsettings.json
@@ -8,7 +8,8 @@
     "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+      "Microsoft.Hosting.Lifetime": "Information",
+      "Microsoft.EntityFrameworkCore": "Debug"
     },
     "NLog": {
       "IncludeScopes": true
@@ -26,7 +27,10 @@
 
     "variables": {
       "logFileDir": "C:\\Temp\\Pubs\\API\\Log",
-      "standardTextLayout": "${longdate} ${level:upperCase=true} ${logger}${newline}${message}${newline}"
+      "basicTextLayout": "${longdate}  ${level:upperCase=true}  ${logger}  ${message}",
+      "entityFrameworkLogTextLayout": "${longdate}  ${level:upperCase=true}  ${logger}${newline}${message}${newline}",
+      "standardTextLayout": "${longdate} | ${event-properties:item=EventId_Id} | ${level:upperCase=true} | ${logger} | ${message} | ${exception:format=tostring}",
+      "detailedTextLayout": "${longdate} ${level:upperCase=true}  ${logger}  ${callsite}${newline} Exception Type: ${exception:format=Type}${newline} Exception Message: ${exception:format=Message}${newline} Additional Info: ${message}${newline} Stack Trace: ${exception:format=StackTrace}${newline}"
     },
 
     "targets": {
@@ -34,10 +38,20 @@
         "type": "File",
         "fileName": "${logFileDir}\\nlog-all-${shortdate}.log",
         "layout": "${standardTextLayout}"
+      },
+      "entityFrameworkCoreFile": {
+        "type": "File",
+        "fileName": "${logFileDir}\\nlog-ef-core-${shortdate}.log",
+        "layout": "${entityFrameworkLogTextLayout}"
       }
     },
 
     "rules": [
+      {
+        "logger": "Microsoft.EntityFrameworkCore.*",
+        "writeTo": "entityFrameworkCoreFile",
+        "final": true
+      },
       {
         "logger": "*",
         "minlevel": "Trace",
