--- a/tests/Pubs.UnitTests/Pubs.UnitTests.csproj
+++ b/tests/Pubs.UnitTests/Pubs.UnitTests.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="FluentAssertions" Version="6.1.0" />
+    <PackageReference Include="Microsoft.AspNet.WebApi.Core" Version="5.2.7" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.11.0" />
     <PackageReference Include="Moq" Version="4.16.1" />
     <PackageReference Include="Shouldly" Version="4.0.3" />
@@ -20,6 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\src\Pubs.API\Pubs.API.csproj" />
     <ProjectReference Include="..\..\src\Pubs.Application\Pubs.Application.csproj" />
     <ProjectReference Include="..\..\src\Pubs.CoreDomain\Pubs.CoreDomain.csproj" />
     <ProjectReference Include="..\..\src\Pubs.Infrastructure.Persistence\Pubs.Infrastructure.Persistence.csproj" />
@@ -34,6 +36,10 @@
       <LastGenOutput>CodeCoverage.Designer.cs</LastGenOutput>
       <Generator>SettingsSingleFileGenerator</Generator>
     </None>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="SharedKernel\Utilities\" />
   </ItemGroup>
 
 </Project>
