Adding a lot of tests across the app.

--- a/tests/Pubs.SharedKernel.Tests/Pubs.SharedKernel.Tests.csproj
+++ b/tests/Pubs.SharedKernel.Tests/Pubs.SharedKernel.Tests.csproj
@@ -23,6 +23,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\src\Pubs.Application\Pubs.Application.csproj" />
+    <ProjectReference Include="..\..\src\Pubs.Infrastructure.Persistence\Pubs.Infrastructure.Persistence.csproj" />
   </ItemGroup>
 
 </Project>
