--- a/src/Pubs.API/Pubs.API.csproj
+++ b/src/Pubs.API/Pubs.API.csproj
@@ -13,7 +13,7 @@
     <PackageReference Include="NLog" Version="4.7.11" />
     <PackageReference Include="NLog.Extensions.Logging" Version="1.7.4" />
     <PackageReference Include="NLog.Web.AspNetCore" Version="4.14.0" />
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.1" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.2" />
     <PackageReference Include="AspNetCore.HealthChecks.SqlServer" Version="5.0.3" />
     <PackageReference Include="AspNetCore.HealthChecks.UI.Client" Version="5.0.1" />
     <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="7.1.0" />
@@ -42,6 +42,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Pubs.Application\Pubs.Application.csproj" />
     <ProjectReference Include="..\Pubs.Infrastructure.Persistence\Pubs.Infrastructure.Persistence.csproj" />
+    <ProjectReference Include="..\Pubs.Infrastructure.Services\Pubs.Infrastructure.Services.csproj" />
   </ItemGroup>
 
   <ItemGroup>
