--- a/src/Pubs.UI/Pubs.UI.csproj
+++ b/src/Pubs.UI/Pubs.UI.csproj
@@ -40,13 +40,15 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="5.0.9" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="5.0.10" />
     <PackageReference Include="Microsoft.VisualStudio.Web.BrowserLink" Version="2.2.0" />
     <PackageReference Include="Microsoft.Web.LibraryManager.Build" Version="2.1.113" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Pubs.Application\Pubs.Application.csproj" />
+    <ProjectReference Include="..\Pubs.Infrastructure.Persistence\Pubs.Infrastructure.Persistence.csproj" />
+    <ProjectReference Include="..\Pubs.Infrastructure.Services\Pubs.Infrastructure.Services.csproj" />
   </ItemGroup>
 
 </Project>
