--- a/tests/Pubs.UnitTests/Pubs.UnitTests.csproj
+++ b/tests/Pubs.UnitTests/Pubs.UnitTests.csproj
@@ -7,6 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="SharedKernel\Utilities\**" />
+    <EmbeddedResource Remove="SharedKernel\Utilities\**" />
+    <None Remove="SharedKernel\Utilities\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="FluentAssertions" Version="6.1.0" />
     <PackageReference Include="Microsoft.AspNet.WebApi.Core" Version="5.2.7" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.11.0" />
@@ -36,10 +42,6 @@
       <LastGenOutput>CodeCoverage.Designer.cs</LastGenOutput>
       <Generator>SettingsSingleFileGenerator</Generator>
     </None>
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="SharedKernel\Utilities\" />
   </ItemGroup>
 
 </Project>
