Wednesday night work

--- a/src/Pubs.API/appsettings.json
+++ b/src/Pubs.API/appsettings.json
@@ -1,7 +1,8 @@
 {
   "EntityFrameworkCoreSettings": {
     "CommandLogLevel": "Warning",
-    "ComamndTimeout": "60"
+    "ComamndTimeout": "60",
+    "CurrentConnectionStringName": "SqlAzureConnection"
   },
 
   "Logging": {
