More week 2 work...

--- a/src/Pubs.API/appsettings.json
+++ b/src/Pubs.API/appsettings.json
@@ -2,7 +2,7 @@
   "EntityFrameworkCoreSettings": {
     "CommandLogLevel": "Warning",
     "ComamndTimeout": "60",
-    "CurrentConnectionStringName": "SqlAzureConnection"
+    "CurrentConnectionStringName": "DefaultConnection"
   },
 
   "Logging": {
