--- a/src/Pubs.UI.Angular/package.json
+++ b/src/Pubs.UI.Angular/package.json
@@ -19,7 +19,6 @@
     "@angular/compiler": "~12.2.0",
     "@angular/core": "~12.2.0",
     "@angular/forms": "~12.2.0",
-    "@angular/material": "^12.2.9",
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
@@ -34,7 +33,7 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~12.2.4",
-    "@angular/cli": "~12.2.4",
+    "@angular/cli": "^12.2.11",
     "@angular/compiler-cli": "~12.2.0",
     "@types/jasmine": "~3.8.0",
     "@types/node": "^12.11.1",
