--- a/src/Pubs.UI.Angular/package.json
+++ b/src/Pubs.UI.Angular/package.json
@@ -13,16 +13,18 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~12.2.0",
-    "@angular/cdk": "^12.2.9",
+    "@angular/animations": "^13.0.3",
+    "@angular/cdk": "^13.0.3",
     "@angular/common": "~12.2.0",
     "@angular/compiler": "~12.2.0",
     "@angular/core": "~12.2.0",
     "@angular/forms": "~12.2.0",
+    "@angular/material": "^13.0.3",
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
     "@fortawesome/fontawesome-free": "^5.15.4",
+    "@popperjs/core": "^2.11.0",
     "bootstrap": "^5.1.1",
     "font-awesome": "^4.7.0",
     "jquery": "^3.6.0",
