--- a/src/Pubs.UI.Angular/package.json
+++ b/src/Pubs.UI.Angular/package.json
@@ -30,12 +30,13 @@
     "jquery": "^3.6.0",
     "popper.js": "^1.16.1",
     "rxjs": "~6.6.0",
+    "terser": "^5.15.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~13.0.4",
-    "@angular/cli": "^13.0.4",
+    "@angular-devkit/build-angular": "^13.3.9",
+    "@angular/cli": "^14.2.1",
     "@angular/compiler-cli": "~13.0.3",
     "@types/jasmine": "~3.8.0",
     "@types/node": "^12.11.1",
